2002-03-11	Thomas Krennwallner <krennwallner@aon.at>

	* po/it.po: fixed a translation bug
	* configure.ac: removed half-translated files tr.po and es.po

2002-02-26	Thomas Krennwallner <krennwallner@aon.at>

	* po/it.po: updated italian translation

2002-02-25	Thomas Krennwallner <krennwallner@aon.at>

	* demo/nic-fake.py: added SecureON support and some improvements
	* src/macfile.c: bugfixes
	* src/magic.c: error return fixes

2002-02-23	Thomas Krennwallner <krennwallner@aon.at>

	* src/macfile.l: remove
	* src/macfile.c: added old version of my own parser with GNU getline support
		and SecureON (tm) password support
	* m4/getline.m4: added
	* lib/getstr.{c,h}: added
	* lib/getline.{c,h}: added
	* configure.ac: AM_FUNC_GETLINE

2002-02-21	Thomas Krennwallner <krennwallner@aon.at>

	* src/wol-dhcpdconf.in: new awk script for dhcpd.conf parsing
	* src/Makefile.am: install wol-dhcpdconf
	* configure.ac: searching for awk binary

2002-02-15	Thomas Krennwallner <krennwallner@aon.at>

	* doc/wol.texi: fixed trademark info and added info about ethtool

2002-02-14	Thomas Krennwallner <krennwallner@aon.at>

	* doc/wol.texi: fixed -i option docu error

2002-02-13	Thomas Krennwallner <krennwallner@aon.at>

	* src/wol.c: document stdin support in help mode
	* doc/wol.texi: document stdin support
	* po/{de,fr,it,es,tr}.po: translation updated

2002-02-12	Thomas Krennwallner <krennwallner@aon.at>

	* src/wol.c: added stdin support through `-f -' and `-', #include "xalloc.h"
	* src/magic.c: #include "xalloc.h"
	* lib/getopt.{c,h}: newer GNU version
	* lib/getopt1.c: newer GNU version
	* lib/{xmalloc.c,xalloc.h}: GNU version
	* lib/xmalloc.h: removed
	* m4/{malloc.c,realloc.c}: added
	* po/{de,fr,it,es,tr}.po: added translation of lib/getopt.c and lib/xmalloc.c
	* configure.ac: add jm_FUNC_MALLOC and jm_FUNC_REALLOC for GNU xmalloc
	* Makefile.am: add ACLOCAL_AMFLAGS to "-I m4" for the jm macros
	* autogen.sh: add -I m4 to aclocal for the jm macros
	* README: typo